# docs/swagger.json
@@ -238,7 +238,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.UserLogin"
+                            "$ref": "#/definitions/request.UserLoginDoc"
                         }
                     }
                 ],
@@ -324,8 +324,7 @@
         }
     },
     "definitions": {
-        "request.UserLogin": {
-            "description": "Structure containing the necessary fields for user login",
+        "request.UserLoginDoc": {
             "type": "object",
             "required": [
                 "email",
